Ticket #28310: tl-demo: Added some dynamic labels to test workflow.

--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.process.messages_en.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.process.messages_en.properties
@@ -6,6 +6,8 @@ model.test.process.Project.tickets = Tickets
 model.test.process.Ticket = Ticket
 model.test.process.Ticket.description = Description
 model.test.process.Ticket.name = Title
+model.test.process.Ticket.reworkCnt = Reworkings
+model.test.process.Ticket.reworkCnt.tooltip = How often a ticket was submitted for testing and rejected for implementation.
 model.test.process.TicketChange = Ticket change
 model.test.process.TicketChangeProperties = Ticket change properties
 model.test.process.TicketChangeProperties.comment = Comment
