--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.process.messages_de.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.process.messages_de.properties
@@ -6,6 +6,8 @@ model.test.process.Project.tickets = Tickets
 model.test.process.Ticket = Ticket
 model.test.process.Ticket.description = Description
 model.test.process.Ticket.name = Titel
+model.test.process.Ticket.reworkCnt = Nacharbeiten
+model.test.process.Ticket.reworkCnt.tooltip = Wie oft ein Ticket zum Test eingereicht und an die Implementierung zurückgewiesen wurde.
 model.test.process.TicketChange = Ticket change
 model.test.process.TicketChangeProperties = Ticket change properties
 model.test.process.TicketChangeProperties.comment = Comment
