Ticket #28310: Enhanced JavaDoc, generated missing I18N.

--- a/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
@@ -50,19 +50,19 @@ com.top_logic.bpe.bpml.display.EditContextPart.context.tooltip = Der <i>Kontext 
 com.top_logic.bpe.bpml.display.GuiType = GUI-Typ
 com.top_logic.bpe.bpml.display.GuiType.expr = Ausdruck
 com.top_logic.bpe.bpml.display.GuiType.expr.tooltip = NICHT VERWENDEN!
-com.top_logic.bpe.bpml.display.GuiType.tooltip = NICHT VERWENDEN!
+com.top_logic.bpe.bpml.display.GuiType.tooltip = NICHT VERWENDEN.
 com.top_logic.bpe.bpml.display.ProcessFormDefinition = Definition des Prozessformulars
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider = Darstellung
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider.tooltip = Formular für diesen Prozessschritt. <p> Dieses Formular wird einem Benutzer angezeigt, der als Bearbeiter für diesen Prozessschritt zugewiesen ist. </p> <p> Wenn hier nichts konfiguriert ist, wird das Standardformular des Prozessmodelltyps in diesem Schritt angezeigt. Durch Setzen dieser Eigenschaft können Sie entweder ein vollständig benutzerdefiniertes Formular definieren oder das Standardformular bzw. das Formular eines anderen Prozessschritts anpassen. </p>
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.tooltip = Konfigurationswert, der das Formular zur Anzeige des Prozessmodells für einen Akteur eines Prozessschritts beschreibt. <p> Dieser Konfigurationstyp wird als Typ eines Attributs eines <i>manuellen Tasks</i> verwendet, um das Formular für diesen Task zu definieren. </p>
 com.top_logic.bpe.bpml.display.RuleType = Regel-Typ
 com.top_logic.bpe.bpml.display.RuleType.DEFAULT = Standard
-com.top_logic.bpe.bpml.display.RuleType.DEFAULT.tooltip = Dies ist die Standardbedingung mit einer Fehlermeldung.
+com.top_logic.bpe.bpml.display.RuleType.DEFAULT.tooltip = Standardbedingung, die eine Fehlermeldung anzeigt, wenn sie nicht erfüllt ist.
 com.top_logic.bpe.bpml.display.RuleType.HIDDEN = Versteckt
-com.top_logic.bpe.bpml.display.RuleType.HIDDEN.tooltip = Dies ist eine besondere Bedingung, bei der der {SequenceFlow} ausgeblendet wird.
+com.top_logic.bpe.bpml.display.RuleType.HIDDEN.tooltip = Bedingung, die den Rand ausblendet, wenn er nicht erfüllt ist.
 com.top_logic.bpe.bpml.display.RuleType.WARNING = Warnung
-com.top_logic.bpe.bpml.display.RuleType.WARNING.tooltip = Dies ist eine besondere Bedingung, bei der eine Warnmeldung angezeigt wird, bevor mit dem nächsten Knoten fortgefahren wird.
-com.top_logic.bpe.bpml.display.RuleType.tooltip = Definiert die Arten von Bedingungen, die auf Sequenzflüsse angewendet werden können.
+com.top_logic.bpe.bpml.display.RuleType.WARNING.tooltip = Bedingung, dass eine Warnmeldung angezeigt wird, bevor Sie mit dem nächsten Schritt fortfahren.
+com.top_logic.bpe.bpml.display.RuleType.tooltip = Arten von Bedingungen, die auf Sequenzbewegungen angewendet werden können.
 com.top_logic.bpe.bpml.display.ScriptFormTypeComputation = Formulartypberechnung über TL-Script
 com.top_logic.bpe.bpml.display.ScriptFormTypeComputation.Config.function = Funktion
 com.top_logic.bpe.bpml.display.ScriptFormTypeComputation.Config.function.tooltip = Funktion, die den Typ der Objekte berechnet, für die ein Formular erstellt werden soll. <p> Es wird erwartet, dass der Ausdruck das Modell der Komponente als einziges Argument akzeptiert. </p>
@@ -96,11 +96,11 @@ com.top_logic.bpe.bpml.display.StandardRule.Config.message = Nachricht
 com.top_logic.bpe.bpml.display.StandardRule.Config.message.tooltip = Der <i>Ressourcenschlüssel</i>, der angezeigt werden soll, wenn die Bedingung nicht erfüllt ist.
 com.top_logic.bpe.bpml.display.StandardRule.Config.rule-type = Regel-Typ
 com.top_logic.bpe.bpml.display.StandardRule.Config.rule-type.tooltip = Legt den Typ der zu verwendenden Regel fest. <p> Standard - Wenn false, können wir nicht auf diesen <i>Sequenzfluss</i> zugreifen und erhalten eine benutzerdefinierte Fehlermeldung. </p> <p> Ausgeblendet - Wenn falsch, können wir den <i>Sequenzfluss</i> nicht sehen. </p> <p> Warnung - Wenn falsch, kann auf diesen <i>Sequenzfluss</i> zugegriffen werden, es wird jedoch ein Popup mit einer benutzerdefinierten Warnmeldung angezeigt. </p>
-com.top_logic.bpe.bpml.display.StandardRule.tooltip = <i>SequenceFlow Rule Definition</i>, die festlegt, ob und unter welchen Umständen auf einen <i>Sequenzfluss</i> zugegriffen werden kann oder nicht.
+com.top_logic.bpe.bpml.display.StandardRule.tooltip = <i>Regelbedingung</i>, die bestimmt, ob und unter welchen Umständen auf einen <i>Sequenzfluss</i> zugegriffen werden kann oder nicht.
 com.top_logic.bpe.bpml.display.TemplateBuilder = Erbauer von Vorlagen
 com.top_logic.bpe.bpml.display.TemplateBuilder.function = Funktion
 com.top_logic.bpe.bpml.display.TemplateBuilder.function.tooltip = NICHT VERWENDEN!
-com.top_logic.bpe.bpml.display.TemplateBuilder.tooltip = NICHT VERWENDEN!
+com.top_logic.bpe.bpml.display.TemplateBuilder.tooltip = NICHT VERWENDEN.
 com.top_logic.bpe.bpml.model.annotation.BPMLExtension = BPML-Erweiterung
 com.top_logic.bpe.bpml.model.annotation.BPMLExtension.tooltip = Anmerkung für einen <i>Teil eines strukturierten Typs</i>, die ihn als BPML-Erweiterung kennzeichnet (nicht Teil des BPML-Kernmodells).
 com.top_logic.bpe.bpml.model.providers.SubClassOptions = Unterklassen-Optionen
