--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1195,7 +1195,7 @@ com.top_logic.element.meta.form.tag.TagProviderAnnotation.impl = Umsetzung
 com.top_logic.element.meta.form.tag.TagProviderAnnotation.impl.tooltip = Konfiguration des zu verwendenden <i>Anzeigeanbieters</i>.
 com.top_logic.element.meta.form.tag.TagProviderAnnotation.tooltip = <i>Attributannotation</i> eines <i>Anzeigeanbieters</i>.
 com.top_logic.element.meta.gui.AbstractCreateAttributedCommandHandler = Objektbefehls-Handler erstellen
-com.top_logic.element.meta.gui.AbstractCreateAttributedCommandHandler.tooltip = Erweiterter Handler für create-Befehle mit <i>Objekt</i>. <p> Zusätzlich zum <i>create command handler</i> ermöglicht diese Klasse die automatische Speicherung von Werten aus den <i>Objektobjekten</i> über <code>#saveMetaAttributes(Map, TLObject)</code>. Dabei werden nur die im <i>Business-Objekttyp</i> definierten Werte gespeichert. </p>
+com.top_logic.element.meta.gui.AbstractCreateAttributedCommandHandler.tooltip = <i>Befehlshandler</i> für die Erstellung von dynamisch typisierten Objekten <i>erstellen</i>.
 com.top_logic.element.meta.gui.CreateAttributedComponent = Teilobjekt anlegen
 com.top_logic.element.meta.gui.CreateAttributedComponent.Config.modifier = Modifikator
 com.top_logic.element.meta.gui.CreateAttributedComponent.Config.modifier.tooltip = Der <i>Formularkontext-Modifikator</i> wird verwendet, um die <i>Formularelemente</i> zu ändern, wenn ein neues Objekt erstellt wird.
