--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1195,7 +1195,7 @@ com.top_logic.element.meta.form.tag.TagProviderAnnotation.impl = Implementation
 com.top_logic.element.meta.form.tag.TagProviderAnnotation.impl.tooltip = Configuration of the <i>display provider</i> to use.
 com.top_logic.element.meta.form.tag.TagProviderAnnotation.tooltip = <i>Attribute annotation</i> for annotating a <i>display provider</i>.
 com.top_logic.element.meta.gui.AbstractCreateAttributedCommandHandler = Create object command handler
-com.top_logic.element.meta.gui.AbstractCreateAttributedCommandHandler.tooltip = Extended handler for create commands with <i>object</i>. <p> Additionally to the <i>create command handler</i>, this class allows the automatic storage of values from the <i>object</i> objects via <code>#saveMetaAttributes(Map, TLObject)</code>. This will only store the values defined in the <i>business object type</i>. </p>
+com.top_logic.element.meta.gui.AbstractCreateAttributedCommandHandler.tooltip = <i>Create command handler</i> for creating dynamic typed objects.
 com.top_logic.element.meta.gui.CreateAttributedComponent = Create object component
 com.top_logic.element.meta.gui.CreateAttributedComponent.Config.modifier = Modifier
 com.top_logic.element.meta.gui.CreateAttributedComponent.Config.modifier.tooltip = The <i>form context modificator</i> is used to modify the <i>form members</i> when a new object is created.
