--- a/com.top_logic.bpe.app/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe.app/src/main/java/META-INF/messages_en.properties
@@ -1,22 +1,14 @@
-com.top_logic.bpe.app.layout.ActiveTaskComponent = Active task component
-com.top_logic.bpe.app.layout.ActiveTaskComponent$ActiveTasksListModelBuilder = Active tasks list model builder
-com.top_logic.bpe.app.layout.ActiveTaskComponent.tooltip = <i>Default edit object component</i> that displays the configured attributes for a given <i>task</i>.
+com.top_logic.bpe.app.layout.ActiveTasksListModelBuilder = Active tasks list model builder
 com.top_logic.bpe.app.layout.ActivityTableConfigurator = Activity table configurator
 com.top_logic.bpe.app.layout.ActivityTableConfigurator.tooltip = <i>Table configuration plug-in</i> building a <i>table configuration</i> for the "active tokens table" (with columns from the <i>token</i> and its process execution.
-com.top_logic.bpe.app.layout.FinishTaskCommand = Finish task command
-com.top_logic.bpe.app.layout.FinishTaskCommand.Config.tokenTable = Token table
-com.top_logic.bpe.app.layout.FinishTaskCommand.tooltip = <i>Command handler</i> to finish a task. Shows a confirm-dialog before switching to the next task. In case of manual <i>gateways</i> the user can choose the next step.
-com.top_logic.bpe.app.layout.ProcessExecutionComponent = Process execution component
-com.top_logic.bpe.app.layout.ProcessExecutionComponent.tooltip = Component editing the <i>form definition</i> of the <i>process execution</i> model.
-com.top_logic.bpe.app.layout.ProcessExecutionCreateComponent = Process execution create component
-com.top_logic.bpe.app.layout.ProcessExecutionCreateComponent.tooltip = <i>Default create object component</i> showing the configured attributes of the first task when starting a process.
 com.top_logic.bpe.app.layout.ProcessExecutionListModelBuilder = Process execution list model builder
 com.top_logic.bpe.app.layout.ProcessExecutionListModelBuilder.tooltip = <i>List model builder</i> for existing <i>process executions</i> for a given <i>collaboration</i>.
+com.top_logic.bpe.app.layout.ShowTaskAction = Show task action
+com.top_logic.bpe.app.layout.ShowTaskAction.Config.tokenTable = Token table
+com.top_logic.bpe.app.layout.ShowTaskAction.Config.tokenTable.tooltip = The component that should select the new process token.
+com.top_logic.bpe.app.layout.ShowTaskAction.tooltip = <i>UI action</i> that selects the newly created process in a table.
 com.top_logic.bpe.app.layout.StartEventListModelBuilder = Start event list model builder
 com.top_logic.bpe.app.layout.StartEventListModelBuilder.tooltip = <i>List model builder</i> for <i>start events</i>. Returns a List of <i>start events</i> to a given <i>collaboration</i> where the current user has access.
-com.top_logic.bpe.app.layout.StartProcessExecutionHandler = Start process execution handler
-com.top_logic.bpe.app.layout.StartProcessExecutionHandler.Config.tokenTable = Token table
-com.top_logic.bpe.app.layout.StartProcessExecutionHandler.tooltip = <i>Command handler</i> to start a <i>process execution</i> and skip the first <i>task</i> if it has already been merged into start-gui (see <i>process execution create component</i>).
 com.top_logic.bpe.app.layout.tiles.ActiveTasksTilePreview = Active tasks tile preview
 com.top_logic.bpe.app.layout.tiles.ActiveTasksTilePreview.tooltip = <i>Tile preview</i> for the "active tasks" using the configured title from the <i>collaboration</i>.
 com.top_logic.bpe.app.layout.tiles.BPMLTilePreview = BPML tile preview
