--- a/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
@@ -50,19 +50,19 @@ com.top_logic.bpe.bpml.display.EditContextPart.context.tooltip = The <i>configur
 com.top_logic.bpe.bpml.display.GuiType = Gui type
 com.top_logic.bpe.bpml.display.GuiType.expr = Expression
 com.top_logic.bpe.bpml.display.GuiType.expr.tooltip = DO NOT USE!
-com.top_logic.bpe.bpml.display.GuiType.tooltip = DO NOT USE!
+com.top_logic.bpe.bpml.display.GuiType.tooltip = DO NOT USE.
 com.top_logic.bpe.bpml.display.ProcessFormDefinition = Process form definition
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider = Display
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.form-provider.tooltip = Form for this process step. <p> This form is displayed to a user who is assigned as the processor for this process step. </p> <p> If nothing is configured here, the default form of the process model type is displayed in this step. By setting this property, you can either define a fully-customized form or adjust the default form or the form of another process step. </p>
 com.top_logic.bpe.bpml.display.ProcessFormDefinition.tooltip = Configuration value that describes the form to display the process model to an actor of a process step. <p> This configuration type is used as type of an attribute of <i>manual task</i> to define the form for this task. </p>
 com.top_logic.bpe.bpml.display.RuleType = Rule type
 com.top_logic.bpe.bpml.display.RuleType.DEFAULT = Default
-com.top_logic.bpe.bpml.display.RuleType.DEFAULT.tooltip = This is the default Condition with an Error Message.
+com.top_logic.bpe.bpml.display.RuleType.DEFAULT.tooltip = Default condition that show an error message if not met.
 com.top_logic.bpe.bpml.display.RuleType.HIDDEN = Hidden
-com.top_logic.bpe.bpml.display.RuleType.HIDDEN.tooltip = This is a special Condition, where the @Link{SequenceFlow} will be hidden.
+com.top_logic.bpe.bpml.display.RuleType.HIDDEN.tooltip = Condition that hides the edge when not fulfilled.
 com.top_logic.bpe.bpml.display.RuleType.WARNING = Warning
-com.top_logic.bpe.bpml.display.RuleType.WARNING.tooltip = This is a special Condition, where a Warning Message pops up before Continuing with the next Node.
-com.top_logic.bpe.bpml.display.RuleType.tooltip = Defines the types of conditions that can be applied to sequence flows.
+com.top_logic.bpe.bpml.display.RuleType.WARNING.tooltip = Condition showing a warning message before continuing with the next step.
+com.top_logic.bpe.bpml.display.RuleType.tooltip = Types of conditions that can be applied to sequence flows.
 com.top_logic.bpe.bpml.display.ScriptFormTypeComputation = Script form type computation
 com.top_logic.bpe.bpml.display.ScriptFormTypeComputation.Config.function = Function
 com.top_logic.bpe.bpml.display.ScriptFormTypeComputation.Config.function.tooltip = Function computing the type of objects to create a form for. <p> It is expected that the expression accepts the component model as single argument. </p>
@@ -96,11 +96,11 @@ com.top_logic.bpe.bpml.display.StandardRule.Config.message = Message
 com.top_logic.bpe.bpml.display.StandardRule.Config.message.tooltip = The <i>resource key</i> to be shown, when the Condition is not met.
 com.top_logic.bpe.bpml.display.StandardRule.Config.rule-type = Rule type
 com.top_logic.bpe.bpml.display.StandardRule.Config.rule-type.tooltip = Defines the type of Rule we want to use. <p> Default - If false, we cannot access this <i>sequence flow</i> and get a Custom Error Message. </p> <p> Hidden - If false, we cannot see the <i>sequence flow</i>. </p> <p> Warning - If false, we can access this <i>sequence flow</i>, however we get a pop up with a custom Warning Message. </p>
-com.top_logic.bpe.bpml.display.StandardRule.tooltip = <i>SequenceFlow Rule Definition</i> that determines either a <i>sequence flow</i> can be accessed or not and under which circumstances.
+com.top_logic.bpe.bpml.display.StandardRule.tooltip = <i>Rule condition</i> that determines either a <i>sequence flow</i> can be accessed or not and under which circumstances.
 com.top_logic.bpe.bpml.display.TemplateBuilder = Template builder
 com.top_logic.bpe.bpml.display.TemplateBuilder.function = Function
 com.top_logic.bpe.bpml.display.TemplateBuilder.function.tooltip = DO NOT USE!
-com.top_logic.bpe.bpml.display.TemplateBuilder.tooltip = DO NOT USE!
+com.top_logic.bpe.bpml.display.TemplateBuilder.tooltip = DO NOT USE.
 com.top_logic.bpe.bpml.model.annotation.BPMLExtension = BPML extension
 com.top_logic.bpe.bpml.model.annotation.BPMLExtension.tooltip = Annotation for a <i>structured type part</i> marking it as a BPML extension (not part of the BPML core model).
 com.top_logic.bpe.bpml.model.providers.SubClassOptions = Sub class options
