Ticket #28310: Added missing I18N.

--- a/com.top_logic.bpe.app/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.bpe.app/src/main/java/META-INF/messages_de.properties
@@ -1,4 +1,5 @@
 com.top_logic.bpe.app.layout.ActiveTasksListModelBuilder = Modellbauer für aktive Aufgabenliste
+com.top_logic.bpe.app.layout.ActiveTasksListModelBuilder.tooltip = Erbauer des Modells für die Liste der aktiven Aufgaben.
 com.top_logic.bpe.app.layout.ActivityTableConfigurator = Konfigurator für Aktivitätstabellen
 com.top_logic.bpe.app.layout.ActivityTableConfigurator.tooltip = <i>Tabellenkonfigurations-Plugin</i>, das eine <i>Tabellenkonfiguration</i> für die "aktive Token-Tabelle" erstellt (mit Spalten für den <i>Token</i> und seine Prozessausführung).
 com.top_logic.bpe.app.layout.ProcessExecutionListModelBuilder = Prozessausführungslisten-Modell-Builder
