--- a/com.top_logic.bpe.app/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe.app/src/main/java/META-INF/messages_en.properties
@@ -1,4 +1,5 @@
 com.top_logic.bpe.app.layout.ActiveTasksListModelBuilder = Active tasks list model builder
+com.top_logic.bpe.app.layout.ActiveTasksListModelBuilder.tooltip = Model builder for the list of active tasks.
 com.top_logic.bpe.app.layout.ActivityTableConfigurator = Activity table configurator
 com.top_logic.bpe.app.layout.ActivityTableConfigurator.tooltip = <i>Table configuration plug-in</i> building a <i>table configuration</i> for the "active tokens table" (with columns from the <i>token</i> and its process execution.
 com.top_logic.bpe.app.layout.ProcessExecutionListModelBuilder = Process execution list model builder
