--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_de.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_de.properties
@@ -46,6 +46,8 @@ model.tl.bpe.bpml.Described.descriptionI18N = Beschreibung
 model.tl.bpe.bpml.Described.tooltip = Abstrakter Obertyp für alle Bestandteile eines Workflows, die eine Beschreibung enthalten können.
 model.tl.bpe.bpml.DisplayDescription = DisplayDescription
 model.tl.bpe.bpml.Edge = Edge
+model.tl.bpe.bpml.Edge.label = Bezeichnung
+model.tl.bpe.bpml.Edge.label.tooltip = Bezeichnung der Kante, wie sie einem Benutzer während der Workflow-Bearbeitung angezeigt werden soll (z. B. bei der Entscheidungsfindung oder als Text auf einer Schaltfläche).
 model.tl.bpe.bpml.Edge.process = Prozess
 model.tl.bpe.bpml.Edge.source = Von
 model.tl.bpe.bpml.Edge.target = Nach
@@ -123,6 +125,8 @@ model.tl.bpe.bpml.Participant.exportDescription = Exportbeschreibung
 model.tl.bpe.bpml.Participant.modelType = Modell-Typ
 model.tl.bpe.bpml.Participant.modelType.tooltip = Typ des prozessgesteuerten Objektes (der Prozessdurchführung). Eine Instanz dieses Typs wird beim Starten eines Prozesses angelegt.
 model.tl.bpe.bpml.Participant.process = Prozess
+model.tl.bpe.bpml.Participant.taskLabel = Dynamische Aufgabenbezeichnung
+model.tl.bpe.bpml.Participant.taskLabel.tooltip = Funktion, die den Namen einer Aufgabe in Workflow-Ansichten berechnet, wenn für die Aufgabe selbst kein Name konfiguriert ist. Die Funktion erhält zwei Argumente: die Prozessausführung und die aktuelle Aufgabe.
 model.tl.bpe.bpml.Participant.tokenType = Zustandstyp
 model.tl.bpe.bpml.Participant.tokenType.tooltip = Der Typ des Objektes, das den Zustand einer Prozessdurchführung in der aktuellen Aufgabe beschreibt.\n\nDer Verlauf einer Prozessdurchführung setzt sich aus der Liste aller Zustandsobjekte zusammen, die im Laufe der Prozessdurchführung angelegt wurden. In jedem dieser Objekte wird mindestens die Verweildauer des Prozesses in dieser Aufgabe und der Bearbeiter der Aufgabe gespeichert.\n\nDurch Angabe eines eigenen Typs für das Zustandsobjekt können weitere Informationen im Verlauf des Prozesses gesammelt werden, die nicht direkt mit dem Prozessobjekt selbst verknüpft sind.
 model.tl.bpe.bpml.Process = Process
@@ -162,6 +166,8 @@ model.tl.bpe.bpml.Task = Aufgabenbeschreibung
 model.tl.bpe.bpml.Task.boundaryEvents = Boundary Events
 model.tl.bpe.bpml.Task.label = Label
 model.tl.bpe.bpml.Task.label.tooltip = Bezeichnung der Aufgabe, wie sie einem Benutzer angezeigt wird, wenn eine abstrakte Aufgabe ohne einen Kontext (eine konkrete Prozessdurchführung) angezeigt wird. Normalerweise wird aber nicht eine abstrakte Aufgabe des Workflows, sondern eine konkrete Aufgabe in einer konkreten Prozessdurchführung angezeigt (z.B. in einer Überschrift oder einer Kachel).
+model.tl.bpe.bpml.Task.labelFunction = Dynamische Bezeichnung
+model.tl.bpe.bpml.Task.labelFunction.tooltip = Dynamische Berechnung des Aufgabennamens, wie er einem Benutzer während der Workflow-Bearbeitung angezeigt werden soll. Das Prozessmodell und die aktuelle Aufgabe können in die Berechnung einbezogen werden. Es wird eine Funktion mit drei Argumenten erwartet. Die aktuelle Prozessausführung (Instanz von `tl.bpe.execution:ProcessExecution`) wird als erstes Argument, die aktuell bearbeitete Aufgabe (`tl.bpe.bpml:Task`) als zweites Argument und der aktuelle Prozessschritt (`tl.bpe.execution:Token`) als drittes Argument übergeben.
 model.tl.bpe.bpml.Task.titleFunction = Dynamische Bezeichnung
 model.tl.bpe.bpml.Task.titleFunction.tooltip = Funktion, um die Bezeichnung einer Aufgabe zu berechnen. In die Berechnung kann das Prozessmodell und die aktuelle Aufgabe einfließen.\n\nErwartet wird eine Funktion mit bis zu vier Argumenten: Die angegebene statische Bezeichnung steht als erstes Argument zur Verfügung. Darauf folgen die aktuelle Prozessdurchführung (Instanz von `tl.bpe.execution:ProcessExecution`), die aktuell bearbeitete Aufgabenstellung (`tl.bpe.bpml:Task`) und als letztes Argument der aktuelle Prozesschritt (`tl.bpe.execution:Token`).\n\nIst keine dynamische Bezeichnung angegeben, so ist der Effekt derselbe, wie wenn die folgende Funktion angegeben wäre: i18n -> execution -> task -> token -> $i18n.localize($execution, $task, $token)
 model.tl.bpe.bpml.Task.titleI18N = Bezeichnung
