Ticket #28310: rename StandardRule Class and update i18ns

--- a/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
@@ -7,6 +7,14 @@ class.com.top_logic.bpe.layout.execution.command.I18NConstants.EDGE_OPTION_LABEL
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.EDGE_OPTION_NO_NAME = (Continue)
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.IMPOSSIBLE_EDGE = ! {0}
 class.com.top_logic.bpe.layout.execution.command.I18NConstants.MULTIPLE_ERRORS_MESSAGE = There are multiple errors associated with this selection.
+com.top_logic.bpe.bpml.display.ConfigurableCondition = Configurable condition
+com.top_logic.bpe.bpml.display.ConfigurableCondition.Config.condition = Condition
+com.top_logic.bpe.bpml.display.ConfigurableCondition.Config.condition.tooltip = The <i>expression</i> used to calculate if the <i>sequence flow</i> is accessible. <p> The <i>expression</i> uses the <i>process execution</i> as the only argument. </p> <p> A <i>boolean</i> is expected as the return. </p>
+com.top_logic.bpe.bpml.display.ConfigurableCondition.Config.message = Message
+com.top_logic.bpe.bpml.display.ConfigurableCondition.Config.message.tooltip = The <i>resource key</i> to be shown, when the Condition is not met.
+com.top_logic.bpe.bpml.display.ConfigurableCondition.Config.rule-type = Rule type
+com.top_logic.bpe.bpml.display.ConfigurableCondition.Config.rule-type.tooltip = Defines rule enforcement for <i>sequence flow</i> transitions when a <i>configurable condition</i> evaluates to false. <p> Default - Block <i>sequence flow</i> and show error message. </p> <p> Hidden - Hide <i>sequence flow</i> from <i>select transition dialog</i> </p> <p> Warning - Allow <i>sequence flow</i> but show a <i>warnings dialog</i> </p>
+com.top_logic.bpe.bpml.display.ConfigurableCondition.tooltip = <i>Rule condition</i> that determines either a <i>sequence flow</i> can be accessed or not and under which circumstances.
 com.top_logic.bpe.bpml.display.DisplayDescription = Display description
 com.top_logic.bpe.bpml.display.DisplayDescription$AttributePart = Attribute part
 com.top_logic.bpe.bpml.display.DisplayDescription$AttributePart.tooltip = A reference to a single displayed attribute.
@@ -89,14 +97,6 @@ com.top_logic.bpe.bpml.display.StandardForm.Config.overlays.tooltip = Customizat
 com.top_logic.bpe.bpml.display.StandardForm.Config.source-task = Source task
 com.top_logic.bpe.bpml.display.StandardForm.Config.source-task.tooltip = ID of another task to take the form definition from. <p> If not given, the default form of the process model type is used as source for the customization. </p> <p> Make sure, not define cycles in this reference. </p>
 com.top_logic.bpe.bpml.display.StandardForm.tooltip = <i>Task form definition</i> using the standard form of the <i>process execution</i> object or the form of another task customized with visibility annotations.
-com.top_logic.bpe.bpml.display.StandardRule = Standard rule
-com.top_logic.bpe.bpml.display.StandardRule.Config.condition = Condition
-com.top_logic.bpe.bpml.display.StandardRule.Config.condition.tooltip = The <i>expression</i> used to calculate if the <i>sequence flow</i> is accessible. <p> The <i>expression</i> uses the <i>process execution</i> as the only argument. </p> <p> A <i>boolean</i> is expected as the return. </p>
-com.top_logic.bpe.bpml.display.StandardRule.Config.message = Message
-com.top_logic.bpe.bpml.display.StandardRule.Config.message.tooltip = The <i>resource key</i> to be shown, when the Condition is not met.
-com.top_logic.bpe.bpml.display.StandardRule.Config.rule-type = Rule type
-com.top_logic.bpe.bpml.display.StandardRule.Config.rule-type.tooltip = Defines the type of Rule we want to use. <p> Default - If false, we cannot access this <i>sequence flow</i> and get a Custom Error Message. </p> <p> Hidden - If false, we cannot see the <i>sequence flow</i>. </p> <p> Warning - If false, we can access this <i>sequence flow</i>, however we get a pop up with a custom Warning Message. </p>
-com.top_logic.bpe.bpml.display.StandardRule.tooltip = <i>Rule condition</i> that determines either a <i>sequence flow</i> can be accessed or not and under which circumstances.
 com.top_logic.bpe.bpml.display.TemplateBuilder = Template builder
 com.top_logic.bpe.bpml.display.TemplateBuilder.function = Function
 com.top_logic.bpe.bpml.display.TemplateBuilder.function.tooltip = DO NOT USE!
@@ -123,6 +123,8 @@ com.top_logic.bpe.execution.engine.FormEditAction.manual-task.tooltip = The <i>m
 com.top_logic.bpe.execution.engine.FormEditActionOp = Form edit action
 com.top_logic.bpe.execution.engine.FormEditActionOp.tooltip = <i>Application scripting action</i> to set a <i>form definition</i> for a <i>manual task</i>.
 com.top_logic.bpe.execution.export.ExportAsPdfHandler = Export as pdf handler
+com.top_logic.bpe.execution.script.CreateProcessInstance$Builder = Builder
+com.top_logic.bpe.execution.script.CreateProcessInstance$Builder.tooltip = <i>Simple method builder</i> creating an <i>create process instance</i> function.
 com.top_logic.bpe.layout.execution.ActiveTaskComponent = Active task component
 com.top_logic.bpe.layout.execution.ActiveTaskComponent.tooltip = <i>Default edit object component</i> that displays the configured attributes for a given <i>task</i>.
 com.top_logic.bpe.layout.execution.ProcessExecutionComponent = Process execution component
