--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_de.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_de.properties
@@ -153,14 +153,14 @@ model.tl.bpe.bpml.SequenceFlow.operation = Operation
 model.tl.bpe.bpml.SequenceFlow.operation.tooltip = Auszuführende Operation, wenn der Workflow über diese Kante läuft. \n\nDie Angabe einer Operation kann nur an Kanten angegeben werden, die von einer manuellen Aufgabe beginnen. Die Angabe einer Operation ist gleichbedeutend mit der Modellierung eines Service-Tasks. Eine Operation an einer Kante vereinfacht das Diagramm und erzeugt keine zusätzlichen Einträge in der Historie der Prozessdurchführung.\n\nDie Funktion erhält vier Argumente, das Prozessobjekt, die alte Aufgabe, die neue Aufgabe (sofern vorhanden) und die Formulardaten des Auswahldialogs für die nächste Aufgabe. Ist für den Übergang kein Formulartyp definiert, ist das letzte Argument null. Werden mehrere parallele Aufgaben gestartet, ist das dritte Argument eine Menge mit allen Folgeaufgaben.
 model.tl.bpe.bpml.SequenceFlow.rule = Bedingung
 model.tl.bpe.bpml.SequenceFlow.rule.tooltip = Prädikatsfunktion, die bei gegebener Prozess-Instanz (als einziges Argument) testet, ob der Weg gegangen werden kann. Die Funktion muss hierfür entweder einen Wahrheitswert oder einen (internationalisierten) Fehlertext, der den Fehler beschreibt, liefern.
-model.tl.bpe.bpml.SequenceFlow.withConfirm = Mit Bestätigung
-model.tl.bpe.bpml.SequenceFlow.withConfirm.tooltip = Zeigt vor der Ausführung eines Aufgabenübergangs einen Bestätigungsdialog an, der eine ausdrückliche Bestätigung des Benutzers erfordert, bevor er fortfährt.
 model.tl.bpe.bpml.SequenceFlowRule = [missing:model.tl.bpe.bpml.SequenceFlowRule]
 model.tl.bpe.bpml.ServiceTask = ServiceTask
 model.tl.bpe.bpml.ServiceTask.action = Aktion
 model.tl.bpe.bpml.ServiceTask.action.tooltip = Operation, die ausgeführt werden soll. Der Funktion wird als einziges Argument die aktuelle Prozess-Instanz übergeben.
 model.tl.bpe.bpml.SignalEventDefinition = Signal
 model.tl.bpe.bpml.StartEvent = StartEvent
+model.tl.bpe.bpml.StartEvent.requireReview = Prüfung erforderlich
+model.tl.bpe.bpml.StartEvent.requireReview.tooltip = Wenn diese Option aktiviert ist, bleibt der Workflow nach der Erstellung im Ausgangszustand. Wenn er deaktiviert ist, wird er bei der Erstellung automatisch in den nächsten Zustand versetzt.
 model.tl.bpe.bpml.StartEvent.title = Bezeichnung
 model.tl.bpe.bpml.StartEvent.title.tooltip = Bezeichnung des Start Events, wie sie einem Benutzer während der Workflow-Bearbeitung angezeigt werden soll.
 model.tl.bpe.bpml.SubProcess = SubProcess
