--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_en.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_en.properties
@@ -153,14 +153,14 @@ model.tl.bpe.bpml.SequenceFlow.operation = Operation
 model.tl.bpe.bpml.SequenceFlow.operation.tooltip = Operation to be executed if the workflow runs via this edge. An operation can only be specified on edges that start from a manual task. Specifying an operation is equivalent to modeling a service task. An operation on an edge simplifies the diagram and does not create any additional entries in the process execution history. The function receives four arguments, the process object, the old task, the new task (if available) and the form data of the selection dialog for the next task. If no form type is defined for the transition, the last argument is zero. If several parallel tasks are started, the third argument is a set with all subsequent tasks.
 model.tl.bpe.bpml.SequenceFlow.rule = Rule
 model.tl.bpe.bpml.SequenceFlow.rule.tooltip = Predicate function testing whether the sequence flow can be executed. The process instance is given as single argument. The function is expected to return a boolean value or an (internationalized) error text describing the error.
-model.tl.bpe.bpml.SequenceFlow.withConfirm = With Confirm
-model.tl.bpe.bpml.SequenceFlow.withConfirm.tooltip = Shows a confirmation dialog before executing a task transition, requiring explicit user acknowledgment before proceeding.
 model.tl.bpe.bpml.SequenceFlowRule = [missing:model.tl.bpe.bpml.SequenceFlowRule]
 model.tl.bpe.bpml.ServiceTask = ServiceTask
 model.tl.bpe.bpml.ServiceTask.action = Action
 model.tl.bpe.bpml.ServiceTask.action.tooltip = Operation to execute. The function takes the current process instance as single argument.
 model.tl.bpe.bpml.SignalEventDefinition = Signal
 model.tl.bpe.bpml.StartEvent = StartEvent
+model.tl.bpe.bpml.StartEvent.requireReview = Require review
+model.tl.bpe.bpml.StartEvent.requireReview.tooltip = When enabled, the workflow will stay in the initial state after creation. When disabled, it will automatically advance to the next state upon creation.
 model.tl.bpe.bpml.StartEvent.title = Title
 model.tl.bpe.bpml.StartEvent.title.tooltip = Title of the start event as it should be displayed to a user during workflow processing.
 model.tl.bpe.bpml.SubProcess = SubProcess
