Ticket #28310: rename and create documentation for the added Functions

--- a/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
@@ -125,6 +125,10 @@ com.top_logic.bpe.execution.engine.FormEditActionOp.tooltip = <i>Application scr
 com.top_logic.bpe.execution.export.ExportAsPdfHandler = Export as pdf handler
 com.top_logic.bpe.execution.script.CreateProcessInstance$Builder = Builder
 com.top_logic.bpe.execution.script.CreateProcessInstance$Builder.tooltip = <i>Simple method builder</i> creating an <i>create process instance</i> function.
+com.top_logic.bpe.execution.script.GetReachableTargets$Builder = Builder
+com.top_logic.bpe.execution.script.GetReachableTargets$Builder.tooltip = <i>Simple method builder</i> creating an <i>get reachable targets</i> function.
+com.top_logic.bpe.execution.script.TransitionProcessInstance$Builder = Builder
+com.top_logic.bpe.execution.script.TransitionProcessInstance$Builder.tooltip = <i>Simple method builder</i> creating an <i>transition process instance</i> function.
 com.top_logic.bpe.layout.execution.ActiveTaskComponent = Active task component
 com.top_logic.bpe.layout.execution.ActiveTaskComponent.tooltip = <i>Default edit object component</i> that displays the configured attributes for a given <i>task</i>.
 com.top_logic.bpe.layout.execution.ProcessExecutionComponent = Process execution component
