Ticket #28474: Created a new css class to style the new behavior.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -3323,6 +3323,7 @@ com.top_logic.layout.form.control.TextInputControl.buttons = Schreibt zusätzlich
 com.top_logic.layout.form.control.TextInputControl.columns = Die Anzahl der anzuzeigenden Spalten.
 com.top_logic.layout.form.control.TextInputControl.disabled = Der clientseitige Wert des Attributs <code>disabled</code>.
 com.top_logic.layout.form.control.TextInputControl.immutableValue = Erzeugt die unveränderliche Wertanzeige.
+com.top_logic.layout.form.control.TextInputControl.inputButtonCssClass = Schreibt die CSS-Klassen für die Schaltfläche neben dem Texteingabefeld.
 com.top_logic.layout.form.control.TextInputControl.onblur = Gibt einen JavaScript-Befehl an, der ausgeführt wird, wenn das Eingabefeld den Fokus verliert (Ereignis onblur).
 com.top_logic.layout.form.control.TextInputControl.onchange = Die JavaScript-Funktion, die aufgerufen werden soll, wenn sich der Wert des Feldes ändert.
 com.top_logic.layout.form.control.TextInputControl.onfocus = Gibt einen JavaScript-Befehl an, der ausgeführt wird, wenn das Eingabefeld den Fokus erhält.
