--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -3323,6 +3323,7 @@ com.top_logic.layout.form.control.TextInputControl.buttons = Writes additional b
 com.top_logic.layout.form.control.TextInputControl.columns = The number of columns to display.
 com.top_logic.layout.form.control.TextInputControl.disabled = The client-side value of the <code>disabled</code> attribute.
 com.top_logic.layout.form.control.TextInputControl.immutableValue = Generates the immutable value display.
+com.top_logic.layout.form.control.TextInputControl.inputButtonCssClass = Writes the CSS classes for the button next to the text input field.
 com.top_logic.layout.form.control.TextInputControl.onblur = Specifies a JavaScript command that is executed when the input field loses focus (onblur event).
 com.top_logic.layout.form.control.TextInputControl.onchange = The JavaScript function to invoke when the value of the field changes.
 com.top_logic.layout.form.control.TextInputControl.onfocus = Specifies a JavaScript command that is executed when the input field receives focus.
