--- a/com.top_logic.basic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.basic/src/main/java/META-INF/messages_de.properties
@@ -865,6 +865,8 @@ com.top_logic.basic.io.FileCompiler.Config.always-check = Immer prüfen
 com.top_logic.basic.io.FileCompiler.Config.always-check.tooltip = Ob die Basisdateien auf Änderungen geprüft werden, um die Datei neu zu kompilieren.
 com.top_logic.basic.io.FileCompiler.Config.base-dir = Basisverzeichnis
 com.top_logic.basic.io.FileCompiler.Config.base-dir.tooltip = Optionale Basispfad-Verwendungen für alle Dateinamen, Standard ""
+com.top_logic.basic.io.FileCompiler.Config.charset = Zeichensatz
+com.top_logic.basic.io.FileCompiler.Config.charset.tooltip = Der Zeichensatz, der zum Lesen von Ressourcen verwendet wird.
 com.top_logic.basic.io.FileCompiler.Config.check-interval = Intervall prüfen
 com.top_logic.basic.io.FileCompiler.Config.check-interval.tooltip = Intervall in ms, in dem eine Prüfung auf Änderung erfolgt, d.h. wenn eine Basisdatei geändert wurde, wird die Änderung höchstens in dieser Zeit in die kompilierte Datei übernommen. <p> Wird nur verwendet, wenn <i>die Prüfung immer</i> wahr ist. </p>
 com.top_logic.basic.io.FileCompiler.Config.files = Dateien
