--- a/com.top_logic.basic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.basic/src/main/java/META-INF/messages_en.properties
@@ -865,6 +865,8 @@ com.top_logic.basic.io.FileCompiler.Config.always-check = Always check
 com.top_logic.basic.io.FileCompiler.Config.always-check.tooltip = Whether the base files are checked for modification to re-compile the file.
 com.top_logic.basic.io.FileCompiler.Config.base-dir = Base directory
 com.top_logic.basic.io.FileCompiler.Config.base-dir.tooltip = Optional base path uses for all file names, default ""
+com.top_logic.basic.io.FileCompiler.Config.charset = Charset
+com.top_logic.basic.io.FileCompiler.Config.charset.tooltip = The character set used to read resources.
 com.top_logic.basic.io.FileCompiler.Config.check-interval = Check interval
 com.top_logic.basic.io.FileCompiler.Config.check-interval.tooltip = Interval in ms when a check for modification occurs, i.e. if a base file changed, in at most this time the change is applied into the compiled file. <p> Only used when <i>Always check</i> is true. </p>
 com.top_logic.basic.io.FileCompiler.Config.files = Files
