Ticket #28310: implement skipStandardOperation Flag

--- a/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
@@ -125,10 +125,12 @@ com.top_logic.bpe.execution.engine.FormEditActionOp.tooltip = <i>Anwendungsaktio
 com.top_logic.bpe.execution.export.ExportAsPdfHandler = Export als PDF-Handler
 com.top_logic.bpe.execution.script.CreateProcessInstance$Builder = Erbauer
 com.top_logic.bpe.execution.script.CreateProcessInstance$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i> zur <i>Erstellung</i> einer <i>Prozessinstanzfunktion</i>.
-com.top_logic.bpe.execution.script.GetReachableTargets$Builder = Erbauer
-com.top_logic.bpe.execution.script.GetReachableTargets$Builder.tooltip = <i>Einfacher Erbauer</i> von <i>Methoden</i>, der eine Funktion zum <i>Erreichen von Zielen</i> erstellt.
-com.top_logic.bpe.execution.script.TransitionProcessInstance$Builder = Erbauer
-com.top_logic.bpe.execution.script.TransitionProcessInstance$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i> zur Erstellung einer <i>Instanzfunktion für einen Übergangsprozess</i>.
+com.top_logic.bpe.execution.script.ExecuteTransition$Builder = Erbauer
+com.top_logic.bpe.execution.script.ExecuteTransition$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i> zur Erstellung einer <i>Ausführungsübergangsfunktion</i>.
+com.top_logic.bpe.execution.script.ForceTransition$Builder = Erbauer
+com.top_logic.bpe.execution.script.ForceTransition$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i> zur Erstellung einer <i>Kraftübergangsfunktion</i>.
+com.top_logic.bpe.execution.script.ReachableNodes$Builder = Erbauer
+com.top_logic.bpe.execution.script.ReachableNodes$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i> zur Erstellung einer Funktion für <i>erreichbare Knoten</i>.
 com.top_logic.bpe.layout.execution.ActiveTaskComponent = Aktive Komponente der Aufgabe
 com.top_logic.bpe.layout.execution.ActiveTaskComponent.tooltip = <i>Standardkomponente zur Bearbeitung von Objekten</i>, die die konfigurierten Attribute für eine bestimmte <i>Aufgabe</i> anzeigt.
 com.top_logic.bpe.layout.execution.ProcessExecutionComponent = Komponente zur Prozessausführung
