Ticket #28523: Refactored ConfiguredScripts to always access the current version of the QueryExecutor.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -1,4 +1,5 @@
-class.com.top_logic.model.search.configured.I18NConstants.ERROR_RESOLVING_SCRIPT__NAME = Unable to resolve configured script {0}.
+class.com.top_logic.model.search.configured.I18NConstants.ERROR_NO_SUCH_SCRIPT__NAME = The configured script ''{0}'' does not exist.
+class.com.top_logic.model.search.configured.I18NConstants.ERROR_RESOLVING_SCRIPT__NAME = Unable to resolve the configured script ''{0}''.
 class.com.top_logic.model.search.expr.I18NConstants.ENCODING_FAILED__MSG_EXPR = Encoding value of expression {1} failed: {0}
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NOT_A_BINARY_VALUE__VAL_EXPR = The value "{0}" is not a binary data value in {1}.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NOT_A_TYPE__VAL_EXPR = The value "{0}" is not a type in expression: {1}
@@ -80,11 +81,8 @@ com.top_logic.model.search.annotate.TLSearchOptions.literals.tooltip = Factory f
 com.top_logic.model.search.annotate.TLSearchOptions.operators = Operators
 com.top_logic.model.search.annotate.TLSearchOptions.operators.tooltip = Factory for <i>operator</i> options in the search UI for the annotated <i>primitive</i> type.
 com.top_logic.model.search.annotate.TLSearchOptions.tooltip = Search-customization for <i>primitive</i> types.
-com.top_logic.model.search.configured.AbstractConfiguredMethodBuilder = Configured method builder
-com.top_logic.model.search.configured.AbstractConfiguredMethodBuilder.tooltip = Abstract implementation of <i>configured method builder</i> that cares about configuration handling.
-com.top_logic.model.search.configured.ConfiguredMethodBuilder.Config.name.tooltip = The name of the TL-Script function. The name must unique.
 com.top_logic.model.search.configured.ConfiguredScript = Configured script
-com.top_logic.model.search.configured.ConfiguredScript.tooltip = <i>Configured method builder</i> that creates <i>search expression</i> based on a configured <i>expression</i>.
+com.top_logic.model.search.configured.ConfiguredScript.tooltip = <i>Method builder</i> that creates <i>search expression</i> based on a configured <i>expression</i>.
 com.top_logic.model.search.configured.ConfiguredTLScriptFunctions = Configured TL-Script functions
 com.top_logic.model.search.configured.ConfiguredTLScriptFunctions.Config.scripts = Scripts
 com.top_logic.model.search.configured.ConfiguredTLScriptFunctions.Config.scripts.tooltip = Scripts that are available for the application. <p> Each script define the name under which it can be executed. The names must be pairwise different. </p>
@@ -96,6 +94,7 @@ com.top_logic.model.search.configured.ScriptConfiguration.implementation = Imple
 com.top_logic.model.search.configured.ScriptConfiguration.implementation.tooltip = The expression that is executed when the script is called. <p> The expression has access to all parameters in <i>Parameters</i>. The return value of the expression is the return value of the called script. </p>
 com.top_logic.model.search.configured.ScriptConfiguration.label = Label
 com.top_logic.model.search.configured.ScriptConfiguration.label.tooltip = The internationalized name of the script.
+com.top_logic.model.search.configured.ScriptConfiguration.name.tooltip = The name of the TL-Script function. The name must unique.
 com.top_logic.model.search.configured.ScriptConfiguration.parameters = Parameters
 com.top_logic.model.search.configured.ScriptConfiguration.parameters.tooltip = Definition of the parameters that can be access by <i>Implementation</i>.
 com.top_logic.model.search.configured.ScriptConfiguration.tooltip = Configuration of TL-Script that delegates to a configured <i>expression</i>.
