--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -1,4 +1,5 @@
-class.com.top_logic.model.search.configured.I18NConstants.ERROR_RESOLVING_SCRIPT__NAME = Das konfigurierte Skript {0} kann nicht aufgelöst werden.
+class.com.top_logic.model.search.configured.I18NConstants.ERROR_NO_SUCH_SCRIPT__NAME = Das konfigurierte Skript ''{0}'' existiert nicht.
+class.com.top_logic.model.search.configured.I18NConstants.ERROR_RESOLVING_SCRIPT__NAME = Das konfigurierte Skript ''{0}'' kann nicht aufgelöst werden.
 class.com.top_logic.model.search.expr.I18NConstants.ENCODING_FAILED__MSG_EXPR = Kodierung des Wertes von Ausdruck {1} fehlgeschlagen: {0}
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NOT_A_BINARY_VALUE__VAL_EXPR = Der Wert "{0}" ist kein binärer Datenwert in {1}.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_NOT_A_TYPE__VAL_EXPR = Der Wert "{0}" ist kein Typ im Ausdruck: {1}
@@ -80,11 +81,8 @@ com.top_logic.model.search.annotate.TLSearchOptions.literals.tooltip = Fabrik fü
 com.top_logic.model.search.annotate.TLSearchOptions.operators = Betreiber
 com.top_logic.model.search.annotate.TLSearchOptions.operators.tooltip = Fabrik für <i>Operator-Optionen</i> in der Such-UI für den annotierten <i>primitiven</i> Typ.
 com.top_logic.model.search.annotate.TLSearchOptions.tooltip = Such-Anpassung für <i>primitive</i> Typen.
-com.top_logic.model.search.configured.AbstractConfiguredMethodBuilder = Konfigurierter Erbauer von Methoden
-com.top_logic.model.search.configured.AbstractConfiguredMethodBuilder.tooltip = Abstrakte Implementierung des <i>konfigurierten Erbauers von Methoden</i>, der sich um die Handhabung der Konfiguration kümmert.
-com.top_logic.model.search.configured.ConfiguredMethodBuilder.Config.name.tooltip = Der Name der TL-Script-Funktion. Der Name muss eindeutig sein.
 com.top_logic.model.search.configured.ConfiguredScript = Konfiguriertes Skript
-com.top_logic.model.search.configured.ConfiguredScript.tooltip = <i>Konfigurierter Erbauer einer Methode</i>, der einen <i>Suchausdruck</i> auf der Grundlage eines konfigurierten <i>Ausdrucks</i> erstellt.
+com.top_logic.model.search.configured.ConfiguredScript.tooltip = <i>Erbauer einer Methode</i>, die einen <i>Suchausdruck</i> auf der Grundlage eines konfigurierten <i>Ausdrucks</i> erstellt.
 com.top_logic.model.search.configured.ConfiguredTLScriptFunctions = Konfigurierte TL-Script-Funktionen
 com.top_logic.model.search.configured.ConfiguredTLScriptFunctions.Config.scripts = Skripte
 com.top_logic.model.search.configured.ConfiguredTLScriptFunctions.Config.scripts.tooltip = Skripte, die für die Anwendung verfügbar sind. <p> Jedes Skript definiert den Namen, unter dem es ausgeführt werden kann. Die Namen müssen paarweise unterschiedlich sein. </p>
@@ -96,6 +94,7 @@ com.top_logic.model.search.configured.ScriptConfiguration.implementation = Umset
 com.top_logic.model.search.configured.ScriptConfiguration.implementation.tooltip = Der Ausdruck, der ausgeführt wird, wenn das Skript aufgerufen wird. <p> Der Ausdruck hat Zugriff auf alle Parameter in <i>Parameter</i>. Der Rückgabewert des Ausdrucks ist der Rückgabewert des aufgerufenen Skripts. </p>
 com.top_logic.model.search.configured.ScriptConfiguration.label = Bezeichnung
 com.top_logic.model.search.configured.ScriptConfiguration.label.tooltip = Der internationalisierte Name des Skripts.
+com.top_logic.model.search.configured.ScriptConfiguration.name.tooltip = Der Name der TL-Script-Funktion. Der Name muss eindeutig sein.
 com.top_logic.model.search.configured.ScriptConfiguration.parameters = Parameter
 com.top_logic.model.search.configured.ScriptConfiguration.parameters.tooltip = Definition der Parameter, auf die die <i>Implementierung</i> zugreifen kann.
 com.top_logic.model.search.configured.ScriptConfiguration.tooltip = Konfiguration von TL-Script, das an einen konfigurierten <i>Ausdruck</i> delegiert.
