Ticket #28539: add custom Error Messages to configuredFormat

--- a/com.top_logic.model.search/src/main/webapp/WEB-INF/conf/resources/modelSearchMessages_en.properties
+++ b/com.top_logic.model.search/src/main/webapp/WEB-INF/conf/resources/modelSearchMessages_en.properties
@@ -117,6 +117,8 @@ class.com.top_logic.model.search.constraint.I18NConstants.NO_DELETION_POSSIBLE__
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_ACCES_TO_UNDEFINED_VARIABLE__NAME = Access to undefined variable "{0}".
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_EVALUATION_FAILED__EXPR_ARGS_DEFS = Evaluation of ''{0}'' failed, arguments: {1}, variables: {2}
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_INVALID_DATE_FORMAT__VAL_EXPR_MSG = Invalid date format ''{0}'' in {1} ({2}).
+class.com.top_logic.model.search.expr.I18NConstants.ERROR_INVALID_FORMAT_ID = Invalid format ID in ''{0}''. Available formats: {1}
+class.com.top_logic.model.search.expr.I18NConstants.ERROR_EMPTY_FORMAT_ID = The argument "id" in the expression "configuredFormat" cannot be empty or null.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_INVALID_FORMAT__STR_EXPR_MSG = Invalid format ''{0}'' in {1} ({2}).
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_INVALID_LIST_INDEX__LIST_INDEX_EXPR = Invalid list index {1} for list {0} used in {2}.
 class.com.top_logic.model.search.expr.I18NConstants.ERROR_LIST_MAP_OR_OBJECT_REQUIRED__VALUE_EXPR = A list, map, or business object is expected, not "{0}" in {1}.
