Ticket #28539: add missing I18Ns

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -196,6 +196,8 @@ com.top_logic.model.search.expr.CompareKind.LT.tooltip = Die linke Seite ist kle
 com.top_logic.model.search.expr.CompareKind.tooltip = Art der <i>Vergleichsoperatoren</i> mit vollständig vergleichbarem Vergleich.
 com.top_logic.model.search.expr.Concat$Builder = Erbauer
 com.top_logic.model.search.expr.Concat$Builder.tooltip = <i>Methoden-Builder</i>, der <i>Konkat</i> erstellt.
+com.top_logic.model.search.expr.ConfiguredFormat$Builder = Erbauer
+com.top_logic.model.search.expr.ConfiguredFormat$Builder.tooltip = <i>Einfacher Erbauer</i> von <i>Methoden</i> zur Erstellung einer <i>konfigurierten Formatfunktion</i>.
 com.top_logic.model.search.expr.CreateObject$Builder = Erbauer
 com.top_logic.model.search.expr.CreateObject$Builder.tooltip = Builder, der einen <i>Objektausdruck</i> erstellt.
 com.top_logic.model.search.expr.DateExpr$Builder = Erbauer
