--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -196,6 +196,8 @@ com.top_logic.model.search.expr.CompareKind.LT.tooltip = The left-hand side is l
 com.top_logic.model.search.expr.CompareKind.tooltip = Kind of <i>compare</i> operators with full comparable comparison.
 com.top_logic.model.search.expr.Concat$Builder = Builder
 com.top_logic.model.search.expr.Concat$Builder.tooltip = <i>Method builder</i> creating <i>concat</i>.
+com.top_logic.model.search.expr.ConfiguredFormat$Builder = Builder
+com.top_logic.model.search.expr.ConfiguredFormat$Builder.tooltip = <i>Simple method builder</i> creating an <i>configured format</i> function.
 com.top_logic.model.search.expr.CreateObject$Builder = Builder
 com.top_logic.model.search.expr.CreateObject$Builder.tooltip = Builder creating a <i>create object</i> expression.
 com.top_logic.model.search.expr.DateExpr$Builder = Builder
