--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.flowchart.messages_de.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.flowchart.messages_de.properties
@@ -14,5 +14,9 @@ model.test.flowchart.Location.usages = Usages
 model.test.flowchart.Part = Part
 model.test.flowchart.Part.color = Color
 model.test.flowchart.Part.name = Name
+model.test.flowchart.Product = Product
+model.test.flowchart.Product.image = Image
+model.test.flowchart.Product.name = Name
+model.test.flowchart.Product.parts = Parts
 model.test.flowchart.Usage = Usage
 model.test.flowchart.Usage.name = Name
