Ticket #28310: clarify requireReview tooltip in StartEvent

--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_de.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_de.properties
@@ -162,7 +162,7 @@ model.tl.bpe.bpml.ServiceTask.action.tooltip = Operation, die ausgeführt werden 
 model.tl.bpe.bpml.SignalEventDefinition = Signal
 model.tl.bpe.bpml.StartEvent = StartEvent
 model.tl.bpe.bpml.StartEvent.requireReview = Prüfung erforderlich
-model.tl.bpe.bpml.StartEvent.requireReview.tooltip = Wenn diese Option aktiviert ist, bleibt der Workflow nach der Erstellung im Ausgangszustand. Wenn er deaktiviert ist, wird er bei der Erstellung automatisch in den nächsten Zustand versetzt.
+model.tl.bpe.bpml.StartEvent.requireReview.tooltip = Steuert, was passiert, nachdem ein Benutzer das Anfangsformular ausgefüllt hat, wenn er einen neuen Prozess startet:\n\nWenn aktiviert (true): Der Prozess beginnt mit der ersten Aufgabe, so dass die Benutzer die soeben eingegebenen Daten überprüfen und ändern können.\n\nWenn deaktiviert (false): Der Prozess überspringt die erste Aufgabe und fährt direkt mit der zweiten Aufgabe fort.
 model.tl.bpe.bpml.StartEvent.title = Bezeichnung
 model.tl.bpe.bpml.StartEvent.title.tooltip = Bezeichnung des Start Events, wie sie einem Benutzer während der Workflow-Bearbeitung angezeigt werden soll.
 model.tl.bpe.bpml.SubProcess = SubProcess
