--- a/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_en.properties
+++ b/com.top_logic.bpe/src/main/webapp/WEB-INF/conf/resources/model.tl.bpe.bpml.messages_en.properties
@@ -162,7 +162,7 @@ model.tl.bpe.bpml.ServiceTask.action.tooltip = Operation to execute. The functio
 model.tl.bpe.bpml.SignalEventDefinition = Signal
 model.tl.bpe.bpml.StartEvent = StartEvent
 model.tl.bpe.bpml.StartEvent.requireReview = Require review
-model.tl.bpe.bpml.StartEvent.requireReview.tooltip = When enabled, the workflow will stay in the initial state after creation. When disabled, it will automatically advance to the next state upon creation.
+model.tl.bpe.bpml.StartEvent.requireReview.tooltip = Controls what happens after a user fills out the initial form when starting a new process:\n\nIf enabled (true): The process begins at the first task, allowing users to review and modify the data they just entered.\n\nIf disabled (false): The process skips the first task and moves directly to the second task.
 model.tl.bpe.bpml.StartEvent.title = Title
 model.tl.bpe.bpml.StartEvent.title.tooltip = Title of the start event as it should be displayed to a user during workflow processing.
 model.tl.bpe.bpml.SubProcess = SubProcess
